# quadrotor

./: README.md  config.py  find.bash
c/: README.md  config.py
c/glut/: config.py
c/quadrotor/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt
c/quadrotor/html/: Alpha_8h_source.html  Config_8hpp_source.html  ControlLaw_8h_source.html  Input_8hpp_source.html  Jerk_8h_source.html  Jounce_8h_source.html  Stop_8hpp_source.html  annotated.html  array_8h_source.html  attitude_8h_source.html  brain_8h_source.html  classAlpha1_1_1Base-members.html  classAlpha1_1_1Base.html  classAlpha1_1_1Base__coll__graph.dot  classAlpha1_1_1Base__coll__graph.map  classAlpha1_1_1Base__coll__graph.md5  classAlpha1_1_1Base__inherit__graph.dot  classAlpha1_1_1Base__inherit__graph.map  classAlpha1_1_1Base__inherit__graph.md5  classAlpha1_1_1Omega-members.html  classAlpha1_1_1Omega.html  classAlpha1_1_1Omega__coll__graph.dot  classAlpha1_1_1Omega__coll__graph.map  classAlpha1_1_1Omega__coll__graph.md5  classAlpha1_1_1Omega__inherit__graph.dot  classAlpha1_1_1Omega__inherit__graph.map  classAlpha1_1_1Omega__inherit__graph.md5  classAlpha1_1_1Q-members.html  classAlpha1_1_1Q.html  classAlpha1_1_1Q__coll__graph.dot  classAlpha1_1_1Q__coll__graph.map  classAlpha1_1_1Q__coll__graph.md5  classAlpha1_1_1Q__inherit__graph.dot  classAlpha1_1_1Q__inherit__graph.map  classAlpha1_1_1Q__inherit__graph.md5  classArray-members.html  classArray.html  classArray__coll__graph.dot  classArray__coll__graph.md5  classAttitude-members.html  (+333 more)
c/quadrotor/html/search/: all_61.html  all_62.html  all_63.html  all_63.js  all_65.html  all_66.js  all_69.html  all_69.js  all_6d.html  all_6f.js  all_70.html  all_71.html  all_71.js  all_73.html  classes_61.js  classes_62.js  classes_63.html  classes_63.js  classes_65.js  classes_66.html  classes_69.html  classes_69.js  classes_6d.js  classes_6f.html  classes_70.js  classes_73.js  classes_74.html  classes_74.js  classes_76.html  classes_76.js  classes_78.html  classes_78.js  namespaces_63.html  namespaces_63.js  namespaces_69.html  namespaces_69.js  search.js
c/quadrotor/latex/: annotated.tex  classAlpha1_1_1Base.tex  classAlpha1_1_1Base__coll__graph.dot  classAlpha1_1_1Base__coll__graph.md5  classAlpha1_1_1Base__inherit__graph.dot  classAlpha1_1_1Base__inherit__graph.md5  classAlpha1_1_1Omega.tex  classAlpha1_1_1Omega__coll__graph.dot  classAlpha1_1_1Omega__coll__graph.md5  classAlpha1_1_1Omega__inherit__graph.dot  classAlpha1_1_1Omega__inherit__graph.md5  classAlpha1_1_1Q.tex  classAlpha1_1_1Q__coll__graph.dot  classAlpha1_1_1Q__coll__graph.md5  classAlpha1_1_1Q__inherit__graph.dot  classAlpha1_1_1Q__inherit__graph.md5  classArray.tex  classArray__coll__graph.dot  classArray__coll__graph.md5  classAttitude.tex  classAttitude__coll__graph.dot  classAttitude__coll__graph.md5  classBrain.tex  classBrain__coll__graph.dot  classBrain__coll__graph.md5  classCL_1_1Alpha.tex  classCL_1_1Alpha__coll__graph.dot  classCL_1_1Alpha__coll__graph.md5  classCL_1_1Alpha__inherit__graph.dot  classCL_1_1Alpha__inherit__graph.md5  classCL_1_1Base.tex  classCL_1_1Base__coll__graph.dot  classCL_1_1Base__coll__graph.md5  classCL_1_1Base__inherit__graph.dot  classCL_1_1Base__inherit__graph.md5  classCL_1_1Omega.tex  classCL_1_1Omega__coll__graph.dot  classCL_1_1Omega__coll__graph.md5  classCL_1_1Omega__inherit__graph.dot  classCL_1_1Omega__inherit__graph.md5  (+168 more)
c/quadrotor/src/quadrotor/: Input.c.pp  Input.cpp  Input.hpp  array.cpp  array.cpp.pre  array.h  attitude.c.pp  attitude.cpp  attitude.h  brain.cpp  brain.cpp.pre  brain.h  command.cpp  command.cpp.pre  command.h  except.h  fda.c.pp  fda.cpp  fda.h  header_dep.dot  plant.cpp  plant.cpp.pre  plant.h  position.c.pp  position.cpp  position.h  quadrotor.cpp  quadrotor.cpp.pre  quadrotor.h  search.cpp.pre  telem.c.pp  telem.cpp  telem.h
c/quadrotor/src/quadrotor/ControlLaw/: Alpha.cpp  Alpha.h  ControlLaw.cpp  ControlLaw.h  Jerk.cpp  Jerk.h  Jounce.cpp  Jounce.h
c/quadrotor/src/quadrotor/command/: Stop.cpp  Stop.hpp
c/quadrotor/src/quadrotor/dot/: Makefile  pos.dot
c/sim/: config.py
c/sim1/: InputFunc.cpp  InputFunc.hpp  Makefile  Print.cpp  Search.cpp  Search.hpp  att.txt  att_param.txt  brain.txt  core  main.cpp  plant.txt  plot.py  pos.txt  pos_param.txt  quad  root.py
c/vis/: config.py  main.cpp
c/vis1/: Makefile  quad
doc/design/: Makefile  main.aux  main.dvi  main.out  main.toc
doc/diagram/: jounce.dot
doc/quat/: Makefile  main.toc
doc1/diagram/: Makefile
drone/: config.py
embed/: AccelGyro.cpp  AccelGyro.h  EmbeddedDrone.cpp  EmbeddedDrone.h  Makefile  README.md  embed  main.cpp  sketch.cpp  sketch.h
glut/: config.py
interactive/: config.py
math/: config.py
old/: ard.cpp
python/: control.py  filter.py  main2.py  pid.py  plot.py  q.txt  quaternion.py  response.py  response_time.py  test.py  visual.py  x.txt
sim/: Makefile  config.py
(+167 files in other folders)
